- added <meta name="viewport" content="width=device-width, initial-scale=1" >. - The hover styling of the nav bar is now consistent with page margins. - moved the header input to be more inline with other elements. - resolved gutter sizes in the header. - Fixed margin issues of the text overlaying the hero image. - Adjusted the padding to the hero image text. - Fixed the page margin issue in the welcome section. - Added a height and width to the author icons in the news section. - Fixed page margins in the footer. - Copyright and social icons are now aligned in the footer. - Fixed the page overlay fade in on menu button press as to not clearly show a white gap.

--- a/scss_and_stylesheet/_footer.scss
+++ b/scss_and_stylesheet/_footer.scss
@@ -39,6 +39,10 @@
                 text-decoration: underline;
             }
         }
+        #footer-item-1 {
+            margin-right: 15px;
+            
+        }
 
         #footer-item-2 {
             margin-right: 45px;
@@ -93,6 +97,7 @@
 
         .footer-but {
             display: inline-block;
+            margin-top: -10px;
         }
 
         #footer-but-1:hover {
