--- a/scss_and_stylesheet/_header.scss
+++ b/scss_and_stylesheet/_header.scss
@@ -8,7 +8,7 @@
 
 #header-img {
     display: block;
-    max-height: 75%;
+    max-height: 79%;
     max-width: 100%;
     z-index: 50;
 }
@@ -48,7 +48,7 @@ body {
     color: $white;
     font-size: 18px;
     width: 141.6px;
-    padding: 5 15px;
+    padding: 5px 15px;
     margin-left:80px;
     border: 1px solid transparent;
     background-color: $style-it;
@@ -59,7 +59,7 @@ body {
     color: $white;
     font-size: 18px;
     width: 149.413px;
-    padding: 5 15px;
+    padding: 5px 15px;
     margin-left: 20px;
     margin-right: 20px;
     border: 1px solid transparent;
@@ -75,6 +75,7 @@ body {
     padding: 5px 15px;
     transform: translateY(-2px);
     border: 1px solid #ccc;
+    margin-left: -5px;
 }
 
 #form-2-main-cont {
@@ -157,7 +158,7 @@ body {
 // #menu-btn {
 //     font-size: 23px;
 //     width: 63px;
-//     padding: 5 15px;
+//     padding: 5px 15px;
 //     border: 0px solid transparent;
 //     background-color: $off-black;
 // }
