--- a/scss_and_stylesheet/_hero.scss
+++ b/scss_and_stylesheet/_hero.scss
@@ -25,6 +25,7 @@
     position: absolute;
     top: 51%;
     margin-left: 3%;
+    margin-right: 3%;
     //margin-right: 20%;
     transform: translate(0% , -50%);
 }
