--- a/scss_and_stylesheet/_news.scss
+++ b/scss_and_stylesheet/_news.scss
@@ -169,6 +169,8 @@
         display: flex;
         img {
             border-radius: 50%;
+            height: 47px;
+            width: 47px;
         }
         border-top: 1px solid #ccc;
 
