--- a/scss_and_stylesheet/_sidebar.scss
+++ b/scss_and_stylesheet/_sidebar.scss
@@ -12,14 +12,16 @@
     animation: fadein 1.5s;
 }
 
+
 @keyframes fadein {
-    from { opacity: 0; }
-    to   { opacity: 0.4; }
+    0% { opacity: 0; }
+    18% { opacity: 0;}
+    100%   { opacity: 0.4; }
 }
 
 @keyframes fadeout {
-    from { opacity: 0.4; }
-    to   { opacity: 0; }
+    0% { opacity: 0.4; }
+    100%   { opacity: 0; }
 }
 
 #sidebar-inner-id {
